# Ultra-MCP-Servers

./: README.md
src/Scout/: README.md  pyproject.toml
src/Scout/src/scout/: server.py
src/Son/: README.md  pyproject.toml
src/Son/src/son/: server.py
src/langflow-version3/: README.md  pyproject.toml
src/langflow-version3/Component_generator/: Generator_v2.ipynb  combine_json_python_models.py  json_prompt.jsonl  python_code_prompt.jsonl  test.json  test.py  train_data.xlsx  train_langflow_custom_component_data.xlsx
src/langflow-version3/Component_generator/extra_data/: Generator.ipynb  multi_line_prompt.jsonl
src/langflow-version3/src/langflow_version3/: server.py
src/notes/: README.md  package-lock.json  package.json  pyproject.toml
src/notes/src/notes/: server.py
src/s3/: README.md  pyproject.toml
src/s3/src/s3/: server.py
