[project]
name = "scout"
version = "0.1.0"
description = "Scout and searches on the web"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "mcp>=1.1.2",]
[[project.authors]]
name = "Tuguldur Tserenbaljir"
email = "btuudo@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
scout = "scout:main"
