[project]
name = "notes"
version = "0.1.0"
description = "just a test mcp server "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "httpx>=0.28.0",
 "mcp>=1.0.0",
 "python-dotenv>=1.0.1",
]
[[project.authors]]
name = "Tuguldur Tserenbaljir"
email = "btuudo@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
notes = "notes:main"
